cmake_minimum_required(VERSION 3.19)
project(owpd310r2 LANGUAGES C VERSION 3.10.2)

set(CMAKE_C_STANDARD 17)

add_subdirectory(common)
set(W1_MASTER_LIB "usbds2490" CACHE STRING "What 'Universal Serial 1-Wire Line Driver Master chip' interface implementation to use")
set_property(CACHE W1_MASTER_LIB PROPERTY STRINGS "usbds2490" "userail")

if (W1_MASTER_LIB STREQUAL "usbds2490")
    add_subdirectory(lib/other/libUSB)
elseif (W1_MASTER_LIB STREQUAL "userail")
    add_subdirectory(lib/userial)
else ()
    message(FATAL_ERROR "Unknown master chip")
endif ()


if (APPLE)
    # Workaround to allow RESCAN feature on MacOS
    set(CMAKE_LINK_GROUP_USING_RESCAN "LINKER: " "LINKER: ")
    set(CMAKE_LINK_GROUP_USING_RESCAN_SUPPORTED TRUE)
endif ()
add_library(w1 INTERFACE)
target_link_libraries(w1 INTERFACE $<LINK_GROUP:RESCAN,${W1_MASTER_LIB} w1common>)

add_subdirectory(apps/atodtst)
add_subdirectory(apps/counter)
add_subdirectory(apps/coupler)
add_subdirectory(apps/fish)
add_subdirectory(apps/gethumd)
add_subdirectory(apps/humalog)
add_subdirectory(apps/memutil)
add_subdirectory(apps/mweather)
add_subdirectory(apps/sa_ps)
add_subdirectory(apps/sa_sha)
add_subdirectory(apps/sa_time)
add_subdirectory(apps/shaapp)
add_subdirectory(apps/shadebit)
add_subdirectory(apps/swtduo)
add_subdirectory(apps/swtloop)
add_subdirectory(apps/swtmain1c)
add_subdirectory(apps/swtmulti)
add_subdirectory(apps/swtsngl)
add_subdirectory(apps/temp)
add_subdirectory(apps/thermo)
add_subdirectory(apps/tstfind)

