cmake_minimum_required(VERSION 3.19)
project(w1common LANGUAGES C)

set(SRCS
        atod20.c
        atod20.h
        atod26.c
        atod26.h
        cnt1d.c
        cnt1d.h
        crcutil.c
        findtype.c
        findtype.h
        humutil.c
        humutil.h
        ibsha33.h
        ibsha33o.c
        ioutil.c
        mbappreg.c
        mbappreg.h
        mbee.c
        mbee.h
        mbee77.c
        mbee77.h
        mbeewp.c
        mbeewp.h
        mbeprom.c
        mbeprom.h
        mbnv.c
        mbnv.h
        mbnvcrc.c
        mbnvcrc.h
        mbscr.c
        mbscr.h
        mbscrcrc.c
        mbscrcrc.h
        mbscree.c
        mbscree.h
        mbscrex.c
        mbscrex.h
        mbscrx77.c
        mbscrx77.h
        mbsha.c
        mbsha.h
        mbshaee.c
        mbshaee.h
        owcache.c
        owerr.c
        owfile.c
        owfile.h
        ownet.h
        owpgrw.c
        owprgm.c
        ps02.c
        ps02.h
        pw77.c
        pw77.h
        rawmem.c
        rawmem.h
        ReadMe.txt
        screenio.c
        sha18.c
        sha33.c
        shadbtvm.c
        shadebit.c
        shaib.c
        shaib.h
 #       sprintf.c
        swt1C.c
        swt1C.h
        swt1f.c
        swt1f.h
        swt3A.c
        swt3A.h
        swt05.c
        swt05.h
        swt12.c
        swt12.h
        swt29.c
        swt29.h
        temp10.c
        temp10.h
        thermo21.c
        thermo21.h
        time04.c
        time04.h
        weather.c
        weather.h)

add_library(w1common STATIC ${SRCS})
target_include_directories(w1common PUBLIC .)
target_link_libraries(w1common PUBLIC m)